<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FirstStartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgFirstScreen"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="76dp"
            android:src="@drawable/img_firstscreen"
             />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/titleFirstScreen"
            style="@style/TitleTS"
            />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/descFirstScreen"
            style="@style/SubTitleTS"
            android:textAlignment="textStart"
            android:paddingHorizontal="24dp"
            />

        <EditText
            android:id="@+id/etUsername"
            style="@style/EditTextTS"
            android:textColor="@color/text"
            android:textColorHint="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/bg_et"
            android:focusable="true"
            android:paddingHorizontal="21dp"
            android:hint="@string/etUname"
            android:inputType="text"
            />

        <TextView
            android:id="@+id/textView"
            style="@style/EditTextTS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/exname"
            android:textAlignment="textStart"
            />

        <Button
            android:id="@+id/btnProceed"
            style="@style/ButtonTS"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="21dp"
            android:backgroundTint="@color/primary"
            android:text="@string/proceed"
          />
    </LinearLayout>


</ScrollView>