<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:collapsedTitleTextColor="@color/white"
            app:collapsedTitleTextAppearance="@style/HeaderTS"
            app:contentScrim="@color/primary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/result_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_bg_dashboard"
                app:layout_collapseMode="parallax" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/HeaderTS"
               android:layout_gravity="center"
               android:text="@string/scan_result"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="@color/primary"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="21dp"
            android:orientation="vertical">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
              >

               <LinearLayout
                   android:id="@+id/linearLayout"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent">

                   <TextView
                       style="@style/SectionTS"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/you_probably"
                       android:textColor="@color/text_light" />

                   <TextView
                       android:id="@+id/result_text"
                       style="@style/BodyTS"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/have_a_s_s"
                       android:textSize="21sp" />

               </LinearLayout>

               <ImageView
                   android:id="@+id/imgIndicator"
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:src="@drawable/ic_check"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

           </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/SectionTS"
                android:text="@string/recommendation_article"/>

            <ProgressBar
                android:id="@+id/progessBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:layout_gravity="center"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_article"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_row_history"
                tools:itemCount="10"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>